--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,44 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person.PNG" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Anacleto Perinanco - CEO</p>
+          <p>"Master of the Wheel"</p>
+          <p class="card-text">
+Anacleto started selling toy cars at flea markets until one day he accidentally sold a real one. 
+Since then, he’s been running Best Cars with more enthusiasm than actual knowledge of mechanics.</p>
+          <p>anacleto.perinanco@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.PNG" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Filomena Trapananda - Chief Mechanic</p>
+          <p>"Queen of the Wrenches"</p>
+          <p class="card-text">
+Filomena joined Best Cars after mistaking the workshop for a nail salon. 
+Three weeks later, she was rebuilding transmissions while still wearing high heels. 
+She claims engines run better if you compliment their paint job first.</p>
+          <p>filomena.trapananda@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.PNG" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Eufrasio Catrilaf - Senior Seller</p>
+          <p>"Bargaining Wizard"</p>
+          <p class="card-text">
+Eufrasio can convince you to buy a car even if you came in asking about a bicycle. 
+He claims he learned his sales skills from watching Turkish soap operas dubbed in Spanish.</p>
+          <p>eufrasio.catrilaf@bestcars.com</p>
         </div>
       </div>
     </div>
